--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,6 +4,10 @@
   height: 90rem;
   display: flex;
 
+  @media screen and (max-width: $tablet) {
+    height: 67rem;
+  }
+
   &_container {
     display: flex;
     justify-content: center;
@@ -27,6 +31,10 @@
   &_heading {
     font-size: 5rem;
     color: $darkBlue;
+
+    @media screen and (max-width: $tablet) {
+      font-size: 3rem;
+    }
   }
   &_subheading {
     color: darkgray;
@@ -35,11 +43,22 @@
     margin-top: 3rem;
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: $tablet) {
+      padding-right: 5rem;
+    }
   }
   // button container
   &_btnContainer {
     align-self: flex-start;
     margin-top: 2rem;
+
+    @media screen and (max-width: $tablet) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
   &_button {
     padding: 2rem 4rem;
@@ -57,6 +76,10 @@
     border-bottom: 5px solid $darkBlue;
     cursor: pointer;
     margin-left: 0.5rem;
+
+    @media screen and (max-width: $tablet) {
+      display: inline;
+    }
   }
   // right side of header
   &_right {
