--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,8 +1,14 @@
+@import "../../styles/variables.scss";
+
 .Card {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
   grid-gap: 4rem;
   margin-top: 6.5rem;
+
+  @media screen and (max-width: $tablet) {
+    grid-gap: 1.5rem;
+  }
 
   &_content {
     padding: 4rem;
