--- a/src/components/Plan/plan.scss
+++ b/src/components/Plan/plan.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .Plan {
   display: flex;
   justify-content: center;
@@ -11,6 +13,10 @@
     font-size: 5rem;
     margin-bottom: 3rem;
     font-weight: 700;
+    text-align: center;
+
+    @media screen and (max-width: $tablet) {
+    }
   }
   &_desc {
     max-width: 70rem;
