--- a/src/components/Plan/plan.scss
+++ b/src/components/Plan/plan.scss
@@ -24,10 +24,71 @@
     margin-bottom: 3.5rem;
   }
   &_billContainer {
+    position: relative;
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &_bill {
+    margin: 0 1.5rem;
   }
-  &_button {
+  &_label {
+    position: relative;
+    display: inline-block;
+    width: 6rem;
+    height: 3.4rem;
   }
+  &_input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+
+    &:checked + .Plan_slider:before {
+      transform: translateX(2.6rem);
+    }
+  }
+  &_slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #2196f3;
+
+    transition: 0.4s;
+
+    &:before {
+      content: "";
+      position: absolute;
+      height: 2.6rem;
+      width: 2.6rem;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: 0.4s;
+    }
+  }
+}
+
+.Plan_input:checked + .Plan_slider:before {
+  transform: translateX(2.6rem);
+}
+.Plan_input:checked + .Plan_slider {
+  background-color: #2196f3;
+}
+
+.rounded {
+  border-radius: 3.4rem;
+
+  &:before {
+    border-radius: 50%;
+  }
+}
+
+.yr {
+  font-weight: bold;
+}
+.mo {
+  font-weight: bold;
 }
