added media queries for mobile

--- a/src/components/Details/details.scss
+++ b/src/components/Details/details.scss
@@ -39,6 +39,9 @@
       justify-content: center;
       align-items: center;
     }
+    @media screen and (max-width: $mobile) {
+      flex-direction: column;
+    }
   }
   &_heading {
     color: $darkBlue;
@@ -50,6 +53,11 @@
     height: 5rem;
     width: 5rem;
     margin-right: 1.5rem;
+
+    @media screen and (max-width: $mobile) {
+      height: 3.5rem;
+      width: 3.5rem;
+    }
   }
 
   // end of left side
