--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,6 +7,12 @@
   @media screen and (max-width: $tablet) {
     height: 67rem;
   }
+  @media screen and (max-width: $mobile) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
 
   &_container {
     display: flex;
@@ -19,6 +25,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media screen and (max-width: $mobile) {
+      width: 100%;
+      padding-top: 15rem;
+    }
   }
   &_card {
     width: 100%;
@@ -45,7 +56,10 @@
     align-items: center;
 
     @media screen and (max-width: $tablet) {
-      padding-right: 5rem;
+      padding-right: 0rem;
+    }
+    @media screen and (max-width: $mobile) {
+      padding-right: 0rem;
     }
   }
   // button container
@@ -88,10 +102,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media screen and (max-width: $mobile) {
+      width: 100%;
+      padding-bottom: 4rem;
+      margin-top: 2rem;
+    }
   }
   &_image {
     background-size: contain;
     width: 100%;
     padding: 4rem;
+
+    @media screen and (max-width: $mobile) {
+      width: 100%;
+    }
   }
 }
