--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -25,6 +25,9 @@ body {
   @media screen and (max-width: $tablet) {
     padding: 0 3rem;
   }
+  @media screen and (max-width: $mobile) {
+    padding: 0 2rem;
+  }
 }
 
 // buttons
