--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -73,6 +73,12 @@
       justify-content: center;
       align-items: center;
     }
+
+    @media screen and (max-width: $mobile) {
+      flex-direction: row;
+      margin: 0 auto;
+      margin-top: 2rem;
+    }
   }
   &_button {
     padding: 2rem 4rem;
